--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -21,9 +21,9 @@ spring:
     datasource:
         driver-class-name: com.mysql.jdbc.jdbc2.optional.MysqlDataSource
         url: jdbc:mysql://localhost:3306/OnlinerRealtPages?useUnicode=true&characterEncoding=utf8
-        name:
-        username: root
-        password:
+        name: OnlinerRealtPages
+        username: jhipster
+        password: jhipster
     jpa:
         database-platform: org.hibernate.dialect.MySQLInnoDBDialect
         database: MYSQL
