--- a/pom.xml
+++ b/pom.xml
@@ -624,7 +624,7 @@
             </activation>
             <properties>
                 <!-- log configuration -->
-                <logback.loglevel>DEBUG</logback.loglevel>
+                <logback.loglevel>INFO</logback.loglevel>
             </properties>
             <dependencies>
                 <dependency>
